--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,70 +1,150 @@
 <!-- <form> -->
-    <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input type="text" class="form-control" [(ngModel)]="firstName" aria-describedby="emailHelp" placeholder="Enter first Name">
+  <form [formGroup]="requiredForm" novalidate>
+    <div class="row">
+     
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2 id="registerHeading" style="font-weight: bold;text-align: center;"> REGISTRATION</h2>
       </div>
-      <div class="form-group">
+      <div class="col-md-2"></div>
+
+   
+  </div>
+    <div class="row">
+     
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <label for="firstName">First Name</label>
+        <input type="text" class="form-control" formControlName="firstname" [(ngModel)]="firstName" aria-describedby="emailHelp" placeholder="Enter first Name">
+        <br/>
+        <div *ngIf="requiredForm.controls['firstname'].invalid && !isValidFormSubmitted">
+          <div *ngIf="requiredForm.controls['firstname'].errors?.['required']" class="alert alert-danger">
+          First Name is required.
+        </div>
+      </div>
+        </div>
+        <div class="col-md-2"></div>
+
+     
+    </div>
+    <div class="row">
+     
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
         <label for="lasttName">Last Name</label>
-        <input type="text" class="form-control" [(ngModel)]="lastName"  aria-describedby="emailHelp" placeholder="Enter last Name">
+        <input type="text" class="form-control" formControlName="lastname" [(ngModel)]="lastName"  aria-describedby="emailHelp" placeholder="Enter last Name">
+        <br/>
+        <div *ngIf="requiredForm.controls['lastname'].invalid && !isValidFormSubmitted">
+          <div *ngIf="requiredForm.controls['lastname'].errors?.['required']" class="alert alert-danger">
+          Last Name is required.
+        </div>
       </div>
-
-      <div class="form-group">
-        <label for="username">UserName</label>
-        <input type="text" class="form-control"  [(ngModel)]="userName"  aria-describedby="emailHelp" placeholder="Enter username">
       </div>
+      <div class="col-md-2"></div>
 
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" [(ngModel)]="emailID"  aria-describedby="emailHelp" placeholder="Enter email">
+   
+  </div>
+
+  <div class="row">
+     
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <label for="username">UserName</label>
+        <input type="text" class="form-control" formControlName="UserName"  [(ngModel)]="userName"  aria-describedby="emailHelp" placeholder="Enter username">
+      <br/>
+      <div *ngIf="requiredForm.controls['UserName'].invalid && !isValidFormSubmitted">
+        <div *ngIf="requiredForm.controls['UserName'].errors?.['required']" class="alert alert-danger">
+        Username is required
+      </div>
+      <div *ngIf="requiredForm.controls['UserName'].errors?.['minlength']" class="alert alert-danger">
+        Username must be at least 4 characters long.
+      </div>
     </div>
-
-    <!-- <div class="form-group">
-        <label for="exampleInputEmail1">Confirm Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      </div> -->
-
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="password" placeholder="Password">
     </div>
+    <div class="col-md-2"></div>
 
-    <!-- <div class="form-group">
-        <label for="exampleInputPassword1">Confirm Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div> -->
+ 
+</div>
+<div class="row">
+     
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" formControlName="Email" [(ngModel)]="emailID"  aria-describedby="emailHelp" placeholder="Enter email">
+    <br/>
+    <div *ngIf="requiredForm.controls['Email'].invalid && !isValidFormSubmitted">
+      <div *ngIf="requiredForm.controls['Email'].errors?.['required']" class="alert alert-danger">
+      Email is required
+    </div>
+    <div *ngIf="requiredForm.controls['Email'].errors?.['pattern']" class="alert alert-danger">
+      Email ID should be proper format
+    </div>
+  </div>
+  </div>
+  <div class="col-md-2"></div>
 
-    <!-- <div class="form-check">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-        <label class="form-check-label" for="exampleRadios1">
-          Author
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-        <label class="form-check-label" for="exampleRadios2">
-          Reader
-        </label>
-      </div> -->
+
+</div>
+<div class="row">
+     
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" formControlName="PassWord" [(ngModel)]="password" placeholder="Password">
+    <br/>
+    <div *ngIf="requiredForm.controls['PassWord'].invalid && !isValidFormSubmitted">
+      <div *ngIf="requiredForm.controls['PassWord'].errors?.['required']" class="alert alert-danger">
+      Password is required
+    </div>
+    <div *ngIf="requiredForm.controls['PassWord'].errors?.['minlength']" class="alert alert-danger">
+      Password must be at least 6 characters long.
+    </div>
+    <div *ngIf="requiredForm.controls['PassWord'].errors?.['maxlength']" class="alert alert-danger">
+      Password must not be more than 15 characters long.
+    </div>
+  </div>
+  </div>
+  <div class="col-md-2"></div>
 
 
-      <div class="form-check">
-        <label for="role">Roles</label>
+</div>
+<div class="row">
+     
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <label for="role">Roles</label>
         <!-- <ul class="list-group">
             <li class="list-group-item"  *ngFor="let role of RoleList"> -->
                 <div *ngFor="let role of RoleList">
-              <input type="radio" [(ngModel)]="radioSelected" name="{{role.roleName}}" value="{{role.roleId}}" /> 
+              <input type="radio" [(ngModel)]="radioSelected" formControlName="gender" name="{{role.roleName}}" value="{{role.roleId}}" /> 
               {{role.roleName}}
             </div>
             <!-- </li>
          </ul>  -->
-      </div>
-      <!-- <ul class="list-group">
-        <li class="list-group-item"  *ngFor="let role of RoleList">
-          <input type="radio" [(ngModel)]="radioSelected" name="list_name" value="{{role.value}}" "/> 
-          {{item.name}}
-        </li>
-     </ul> -->
+  <br/>
+  <div *ngIf="requiredForm.controls['gender'].invalid && !isValidFormSubmitted">
+    <div *ngIf="requiredForm.controls['gender'].errors?.['required']" class="alert alert-danger">
+    Mandatory to choose role
+  </div>
+</div>
+  </div>
+  <div class="col-md-2"></div>
 
 
+</div>
+<div class="row">
+     
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
     <button type="submit" class="btn btn-primary" (click)="AddUser()">Submit</button>
-  <!-- </form> -->
+  
+  </div>
+  <div class="col-md-2"></div>
+
+
+</div>
+
+
+
+   
+  </form>
