Change done for purchase book for non logged in users

--- a/src/app/author/author.component.html
+++ b/src/app/author/author.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
 <div class="container">
-<button type="button" class="btn btn-success" (click)="openModal()">Add Book</button>
+<button type="button" class="btn btn-success" (click)="openModal()">ADD BOOK</button>
 </div>
 </div>
 
